--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,12 @@
 {
   'extends': 'airbnb-base',
   'globals': {
-  	'$': true
+  	'$': true,
   },
   'rules': {
-  	'no-param-reassign': [2, { props: false }]
+  	'no-param-reassign': [2, { props: false }],
+  	'no-underscore-dangle': [2, {
+  	  'allowAfterThis': true,
+  	}],
   }
 }
